# use-gamelift-to-integrate-java-game-server-to-build-a-flexible-game-service-cluster

./: .gitignore  README.md  build-and-deploy-game-server.sh  settings.gradle
JNIGameliftServerSDK/: CMakeLists.txt  README.md
JNIGameliftServerSDK/jni-gamelift-server-sdk/: CMakeLists.txt  JNIGameLiftServerSDK.cpp  aws_samples_gamelift_jni_GameLiftServerSDKJNI.h  utils.h
ServerBuild/: install.sh  start-game-server.sh
backend-service/: README.md  cdk.json  package-lock.json  package.json
backend-service/lib/: apigateway.ts  backend-service-stack.ts  gamelift.ts  iam.ts  lambda.ts
backend-service/resource/lambda-scripts/: get-game-session.ts  start-game-session.ts  utility-functions.ts
backend-service/test/: backend-service.test.ts
gradle/wrapper/: gradle-wrapper.properties
java-game-server/: build-and-deploy-game-server.sh  build.gradle
java-game-server/ServerBuild/: fluent-bit.conf  install.sh  start-game-server.sh
java-game-server/src/main/java/aws/samples/gamelift/: GameServer.java
java-game-server/src/main/java/aws/samples/gamelift/jni/: GameLiftServerSDKJNI.java
java-game-server/src/main/java/aws/samples/gamelift/utils/: LibLoader.java  NativeUtils.java  Utils.java
src/main/java/aws/samples/gamelift/: GameServer.java  Main.java
src/main/java/aws/samples/gamelift/jni/: GameLiftServerSDKJNI.java  aws_samples_gamelift_jni_GameLiftServerSDKJNI.h
src/main/java/aws/samples/gamelift/utils/: LibLoader.java
